Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15767

innodb.101_compatibility fails on buildbot

    XMLWordPrintable

Details

    Description

      The test innodb.101_compatibility occasionally fails, because the flags for the tables tdd and tp are not always converted back. Thus, the second attempt of corrupting the flags will corrupt garbage to garbage, and cause test failure.

      This started failing related to one or two MDEV-12266 commits affecting the function fsp_flags_try_adjust(). The fix should be simple:

      diff --git a/storage/innobase/fil/fil0fil.cc b/storage/innobase/fil/fil0fil.cc
      index fe7af34be2e..3f3b75332e6 100644
      --- a/storage/innobase/fil/fil0fil.cc
      +++ b/storage/innobase/fil/fil0fil.cc
      @@ -4156,7 +4156,7 @@ void fsp_flags_try_adjust(fil_space_t* space, ulint flags)
       {
       	ut_ad(!srv_read_only_mode);
       	ut_ad(fsp_flags_is_valid(flags, space->id));
      -	if (!space->size) {
      +	if (!space->size && !fil_space_get_size(space->id)) {
       		return;
       	}
       	/* This code is executed during server startup while no
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.