MDEV-15767 innodb.101_compatibility fails

The test innodb.101_compatibility occasionally fails, because the flags
for the tables tdd and tp are not always converted back. Thus, the
second attempt of corrupting the flags will update garbage to garbage,
and cause test failure.

This started failing related to one or two MDEV-12266 commits affecting
the function fsp_flags_try_adjust().

fsp_flags_try_adjust(): If the file has not been opened (space->size==0),
try determining its size by reading the file. Only if the file is not
readable, give up.

Also, avoid dummy writes in the Perl script, and add some instrumentation.